samples/_failures_safe/1761633493_6783d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f260dcaf.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_f260dcaf.c:164:5: error: expected expression at end of input
  164 |     } else
      |     ^
./samples/SAFE/__tmp_f260dcaf.c:164:5: error: expected declaration or statement at end of input
